ingress/apple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-deployment
  labels:
    app: apple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
        - name: apple
          image: hashicorp/http-echo
          args:
            - "-text=apple"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  type: NodePort
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
