ingress/banana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-deployment
  labels:
    app: banana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
        - name: banana
          image: hashicorp/http-echo
          args:
            - "-text=banana"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  type: NodePort
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
