ingress/fruit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruit-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /apple
            pathType: Exact
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
          - path: /banana
            pathType: Exact
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
